@@ -8,8 +8,11 @@
  *   + Department of Computer Science
  *     + Real-Time and Embedded Systems Group
  * 
- * This code is provided under the terms of the Eclipse Public License (EPL).
- * See the file epl-v10.html for the license text.
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License 2.0 which is available at
+ * http://www.eclipse.org/legal/epl-2.0.
+ *
+ * SPDX-License-Identifier: EPL-2.0
  */
 package de.cau.cs.kieler.klighd.ui.view.controller;
 
@@ -320,7 +323,7 @@ public final class ViewUpdateControllerFactory {
                     mucm.idControllerMapping.get(controllerID);
             if (clazz != null) {
                 try {
-                    AbstractViewUpdateController newInstance = clazz.newInstance();
+                    AbstractViewUpdateController newInstance = clazz.getDeclaredConstructor().newInstance();
                     newInstance.initialize(diagramView);
                     return newInstance;
                 } catch (Exception e) {
